tests/golden/compile-pass/module_inline_basic.rua
mod math {
    pub fn add(a: i64, b: i64) -> i64 {
        a + b
    }
}

fn main() {
    let value = math::add(2, 3);
}
