tests/golden/compile-fail/try_on_non_result.rua
fn main() {
    let x: i64 = 42;
    let _y = x?;
}
